# globalchat-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  release.yml
.sqlx/: query-7ef191312fbdbf5e52181ddf2f068bf2632200f02477ef33908a0f68c57307ea.json  query-b5c61713f26eb0ac00691f292ec9094046d9f3384b8f772e5fd0a486580effd9.json
migrations/: 20240203031413_message.sql
src/: db.rs  main.rs  utils.rs
