[package]
name = "globalchat-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.20"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.36.0", features = ["full"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
